<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity"

    >

    <Button
        android:id="@+id/bequalto"
        android:layout_width="107dp"
        android:layout_height="105dp"
        android:layout_marginStart="316dp"
        android:layout_marginLeft="316dp"
        android:background="@color/black"
        android:text="@string/equalTo"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.934" />

    <Button
        android:id="@+id/bclear"
        android:layout_width="106dp"
        android:layout_height="105dp"
        android:background="@color/black"
        android:text="@string/clear"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.384" />

    <Button
        android:id="@+id/bdel"
        android:layout_width="107dp"
        android:layout_height="105dp"
        android:layout_marginStart="216dp"
        android:layout_marginLeft="216dp"
        android:background="@color/black"
        android:text="@string/delete"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.384" />

    <Button
        android:id="@+id/bplus"
        android:layout_width="107dp"
        android:layout_height="105dp"
        android:layout_marginStart="316dp"
        android:layout_marginLeft="316dp"
        android:background="@color/black"
        android:text="@string/plus"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.384" />

    <Button
        android:id="@+id/bpercentage"
        android:layout_width="107dp"
        android:layout_height="105dp"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        android:background="@color/black"
        android:text="@string/percentage"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.384" />

    <Button
        android:id="@+id/b1"
        android:layout_width="107dp"
        android:layout_height="105dp"
        android:background="@color/black"
        android:text="@string/_1"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.797" />

    <Button
        android:id="@+id/b3"
        android:layout_width="107dp"
        android:layout_height="105dp"
        android:layout_marginStart="216dp"
        android:layout_marginLeft="216dp"
        android:background="@color/black"
        android:text="@string/_3"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.797" />

    <Button
        android:id="@+id/bdivide"
        android:layout_width="107dp"
        android:layout_height="105dp"
        android:layout_marginStart="316dp"
        android:layout_marginLeft="316dp"
        android:background="@color/black"
        android:text="@string/div"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.797" />

    <Button
        android:id="@+id/b0"
        android:layout_width="106dp"
        android:layout_height="105dp"
        android:background="@color/black"
        android:text="@string/_0"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.934" />

    <Button
        android:id="@+id/bdecimal"
        android:layout_width="107dp"
        android:layout_height="105dp"
        android:layout_marginStart="216dp"
        android:layout_marginLeft="216dp"
        android:background="@color/black"
        android:text="@string/dec"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.934" />

    <Button
        android:id="@+id/b2"
        android:layout_width="107dp"
        android:layout_height="105dp"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        android:background="@color/black"
        android:text="@string/_2"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.797" />

    <Button
        android:id="@+id/b4"
        android:layout_width="107dp"
        android:layout_height="105dp"
        android:background="@color/black"
        android:text="@string/_4"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.66" />

    <Button
        android:id="@+id/b6"
        android:layout_width="107dp"
        android:layout_height="105dp"
        android:layout_marginStart="216dp"
        android:layout_marginLeft="216dp"
        android:background="@color/black"
        android:text="@string/_6"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.66" />

    <Button
        android:id="@+id/bmult"
        android:layout_width="107dp"
        android:layout_height="105dp"
        android:layout_marginStart="316dp"
        android:layout_marginLeft="316dp"
        android:background="@color/black"
        android:text="@string/mult"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.66" />

    <Button
        android:id="@+id/b5"
        android:layout_width="107dp"
        android:layout_height="105dp"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        android:background="@color/black"
        android:text="@string/_5"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.66" />

    <TextView
        android:id="@+id/output"
        android:layout_width="413dp"
        android:layout_height="199dp"
        android:gravity="bottom|end"
        android:text="@string/_0"
        android:textColor="@color/white"
        android:textSize="54sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07" />

    <Button
        android:id="@+id/b9"
        android:layout_width="107dp"
        android:layout_height="105dp"
        android:layout_marginStart="216dp"
        android:layout_marginLeft="216dp"
        android:background="@color/black"
        android:text="@string/_9"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.523" />

    <Button
        android:id="@+id/b7"
        android:layout_width="106dp"
        android:layout_height="105dp"
        android:background="@color/black"
        android:text="@string/_7"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.523" />

    <Button
        android:id="@+id/b8"
        android:layout_width="107dp"
        android:layout_height="105dp"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        android:background="@color/black"
        android:text="@string/_8"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.523" />

    <Button
        android:id="@+id/bminus"
        android:layout_width="107dp"
        android:layout_height="105dp"
        android:layout_marginStart="316dp"
        android:layout_marginLeft="316dp"
        android:background="@color/black"
        android:text="@string/minus"
        android:textColor="@color/colorAccent"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.523" />

    <Button
        android:id="@+id/b00"
        android:layout_width="107dp"
        android:layout_height="105dp"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        android:background="@color/black"
        android:text="@string/_00"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.934" />


</androidx.constraintlayout.widget.ConstraintLayout>